# Alure-C-Interface

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  auxiliaryEffectSlot.cpp  auxiliaryEffectSlot.hpp  buffer.cpp  buffer.hpp  common.h  context.cpp  context.hpp  device.cpp  device.hpp  deviceManager.cpp  deviceManager.hpp  effect.cpp  effect.hpp  listener.cpp  listener.hpp  source.cpp  source.hpp  sourceVector.cpp  sourceVector.hpp  structs.hpp  wrapException.cpp  wrapException.hpp  wrapString.cpp  wrapString.hpp  wrapStringVector.cpp  wrapStringVector.hpp
